name:                pure-async
version:             0.8.0.0
homepage:            purehs.org/doc/pure-async
synopsis:            Async decorator
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-async.git

library
  exposed-modules:     Pure.Async
  build-depends:       base,
                       pure-core,
                       pure-default
  hs-source-dirs:      src
  default-language:    Haskell2010
